tests/typing/is_faulty_checking.sy
A :: blob {
    a: int,
}

B :: blob {
    a: int,
    b: str,
}

C :: blob {
    a: int,
    b: int,
    c: str,
}

:A is :A
:A is :B
:A is :C
:B is :B
:C is :C

:B is :A
:C is :A

start :: fn { }

// error: Error::CompileError { .. }
// error: Error::CompileError { .. }
